--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "matic:matic:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
     "aave:main:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
-    "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:mainnet --verify",
+    "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:dev --verify",
     "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
     "aave:fork:main": "npm run compile && FORK=main hardhat aave:mainnet",
     "aave:fork:kovan": "npm run compile && FORK=kovan hardhat aave:mainnet",
